se ajusta icono del link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,200&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/iconoLol.jpg" type="image/jpg">
+    <link rel="icon" href="image/iconoLol.jpg" type="image/jpg">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Legue of Legend</title>
 </head>
@@ -15,7 +15,7 @@
         <header class="header">
             <div class="container-menu">
                 <div class="container-logo">
-                    <img src="image/league-of-legends-logo.png" alt=""  style="position: static;"/>
+                    <img src="image/league-of-legends-logo.png" alt="" />
                 </div>
                 <nav class="nav-list">
                     <ul class="main-menu">
